--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "dependencies": {
         "@tailwindcss/aspect-ratio": "^0.4.2",
-        "@tailwindcss/forms": "^0.5.9"
+        "@tailwindcss/forms": "^0.5.9",
+        "laravel-echo": "^1.17.1",
+        "pusher-js": "^8.4.0-rc2"
     }
 }
