--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "@tailwindcss/forms": "^0.5.9",
         "laravel-echo": "^1.17.1",
         "pusher-js": "^8.4.0-rc2"
+    },
+    "engines": { 
+    "node": "18.x" 
     }
+
 }
