--- a/vercel.json
+++ b/vercel.json
@@ -29,6 +29,7 @@
         "DB_HOST": "4gg.h.filess.io",
         "DB_PORT": "3306",
         "DB_DATABASE": "laundry_laravel11",
-        "DB_USERNAME": "root"
+        "DB_USERNAME": "root",
+        "DB_PASSWORD": ""
     }
 }
